# rust-sfu

./: .gitignore  clippy.txt
certs/: fingerprint.txt
client/: Chrome.lnk  index.html  package-lock.json  tsconfig.json
client/src/: index.html
client/src/style/: style.css
client/src/ts/: main.ts
client/ts/: main.ts
sfu/: Cargo.toml  next-steps.txt  readme.md
sfu-client/: Cargo.toml  readme.md
sfu-client/src/: lib.rs
sfu-client/src/codecs/: chunk.rs  decoder.rs  encoder.rs  mod.rs
sfu-client/src/endpoints/: mod.rs  publisher_endpoint.rs  subscriber_endpoint.rs
sfu-load/: Cargo.toml  readme.md
sfu-load/src/: main.rs
sfu-sdk-js/: Cargo.toml  readme.md
sfu-sdk-js/.cargo/: config.toml
sfu-sdk-js/src/: lib.rs  start.rs
sfu-sdk-js/src/codecs/: mod.rs  wc_decoder.rs  wc_encoder.rs
sfu-sdk-js/src/endpoints/: mod.rs  ws_publisher_endpoint.rs  ws_subscriber_endpoint.rs
sfu-web/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
sfu-web/public/: index.html
sfu-web/src/: index.css  index.html  index.tsx  styles.scss
sfu-web/src/app/: app.component.html  (+4 more)
sfu/certs/: server.key
sfu/old/certs/: instructions.md  server.crt  server.crt.pem  server.key.pem
sfu/src/: main.rs
sfu/src/endpoints/: data.rs  mod.rs  publisher_endpoint.rs  subscriber_endpoint.rs  transport_error.rs
sfu/src/routing/: mod.rs  routing_error.rs  send_error.rs
sfu/src/routing/board/: board.rs  board_loop.rs  board_message.rs  mod.rs
sfu/src/routing/board/state/: mod.rs  router_state.rs
sfu/src/routing/publisher/: actor.rs  address.rs  message.rs  mod.rs  publisher.rs  publisher_loop.rs  publisher_message.rs  task.rs
sfu/src/routing/router/: mod.rs  router.rs  router_loop.rs  router_message.rs
sfu/src/routing/sfu/: actor.rs  address.rs  message.rs  mod.rs  sfu.rs  sfu_loop.rs  sfu_message.rs  task.rs
sfu/src/routing/sfu/info/: mod.rs  publisher_info.rs
sfu/src/routing/subscriber/: actor.rs  address.rs  message.rs  mod.rs  subscriber.rs  subscriber_loop.rs  subscriber_message.rs  task.rs
sfu/src/routing/subscription_manager/: mod.rs  subscription_manager.rs  subscription_manager_loop.rs  subscription_manager_message.rs
sfu/src/routing/subscription_manager/state/: subscriber_state.rs
sfu/src/transport/: consumer.rs  data_receiver.rs  data_sender.rs  media.rs  media_consumer.rs  media_producer.rs  mod.rs  producer.rs  transport_error.rs
web/: tsconfig.json
(+21 files in other folders)
