[package]
name = "sfu-load"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.15.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = "0.16.1"
url = "2.2.2"
