[package]
name = "sfu"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.15.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"] }
